--- a/hello.yaml
+++ b/hello.yaml
@@ -1,3 +1,16 @@
 "apple" : "I am red fruit"
 
 1: "This is Abhigyan's roll number"
+
+
+
+# lists
+
+-apple
+-mango
+-banana
+-Apple
+
+cities:
+-new delhi
+-mumbai
