--- a/advanceDatatypes.yaml
+++ b/advanceDatatypes.yaml
@@ -8,3 +8,16 @@ student: !!seq
  #like this also
 cities: [new delhi,mumbai]
 
+
+#some of the keys if the seq will be empty
+
+#sparse seq
+
+sparse seq:
+ - hey
+ - how
+ -
+ - Null
+
+
+# nested sequence
